--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -1,7 +1,70 @@
 {% extends 'layout.html.twig' %}
 {% block title %}Mon profil{% endblock %}
 {% block main %}
-    <div class="col-sm-12" >
+    <div class="jumbotron">
+        <h1 class="text-center">Mon profil</h1>
+        {{ form_start(userForm) }}
+        <div class="form-row col-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                <img src="{{ asset('uploads/photo_profil/' ~
+                    user.getUrlPhoto()) }}" width="150">
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                {{ form_row(userForm.prenom) }}
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                {{ form_row(userForm.nom) }}
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                {{ form_row(userForm.pseudo) }}
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                {{ form_row(userForm.campus) }}
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                {{ form_row(userForm.telephone) }}
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                {{ form_row(userForm.mail) }}
+            </div>
+            <div class="col-12">
+                <div class="form-row align-items-center">
+                    <label class="col-2 col-lg-1 col-md-1 col-sm-2 col-xs-6">
+                        Photo</label>
+                    <div class="col-7 col-lg-4 col-md-5 col-sm-7"
+                         style="padding-top: 15px"
+                         style="background-color:#5eb5e0">
+                        {{ form_row(userForm.urlPhoto) }}
+                    </div>
+                </div>
+            </div>
+            {#            <div class="col-10 offset-1 row border border-dark bg-light">#}
+            {#                <div class="col-sm-4 col-xs-12 align-self-center">#}
+            {#                    <h5>Modifier votre mot de passe : </h5>#}
+            {#                </div>#}
+            {#                <div class="col-sm-6 offset-2">#}
+            {#                    {{ form_row(userForm.password) }}#}
+            {#                </div>#}
+            {#            </div>#}
+        </div>
+        {{ form_row(userForm._token) }}
+        <br>
+        <div class="text-center">
+            <button class="btn btn-primary" type="submit">Modifier</button>
+            <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+            {% if app.user.administrateur == 1 %}
+                <form action="{{ path('supprimer', {id: user.id}) }}" onsubmit="return validate()">
+                    <input id="status" hidden value="nope">
+                    <button class="btn btn-danger" type="submit">Supprimer utilisateur</button>
+                </form>
+            {% endif %}
+        </div>
+        {{ form_end(userForm, {'render_rest': false}) }}
+    </div>
+
+
+
+    <div class="col-sm-12">
 
         <h1 class="col-sm-12 text-center" style="padding-bottom: 20px">Mon profil</h1>
 
@@ -49,7 +112,8 @@
 
             <div class="form-group row">
                 <label class="col-sm-4">Ma photo : </label>
-                <div class="btn-outline-primary col-sm-8" style="padding-top: 3px;padding-bottom: 2px; background-color: #1b1e21">
+                <div class="btn-outline-primary col-sm-8"
+                     style="padding-top: 3px;padding-bottom: 2px; background-color: #1b1e21">
                     {{ form_label(userForm.urlPhoto) }}
                     {{ form_widget(userForm.urlPhoto) }}
                     {{ form_errors(userForm.urlPhoto) }}
@@ -57,8 +121,8 @@
             </div>
         </div>
     </div>
-        <br>
-        {{ form_row(userForm._token) }}
+    <br>
+    {{ form_row(userForm._token) }}
     </div>
 
     <div class="text-center">
