--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -1,5 +1,7 @@
 {% extends 'layout.html.twig' %}
+
 {% block title %}Mon profil{% endblock %}
+
 {% block main %}
     <div class="jumbotron">
         <h1 class="text-center">Mon profil</h1>
@@ -38,105 +40,37 @@
                     </div>
                 </div>
             </div>
-            {#            <div class="col-10 offset-1 row border border-dark bg-light">#}
-            {#                <div class="col-sm-4 col-xs-12 align-self-center">#}
-            {#                    <h5>Modifier votre mot de passe : </h5>#}
-            {#                </div>#}
-            {#                <div class="col-sm-6 offset-2">#}
-            {#                    {{ form_row(userForm.password) }}#}
-            {#                </div>#}
-            {#            </div>#}
+
+            <div class="card col-12 col-lg-8 offset-lg-2">
+                <div class="card-body row">
+                    <h5 class="card-title col-12">
+                        Modifier votre mot de passe :
+                    </h5>
+                    <div class="col-12 col-lg-6 col-md-6 col-sm-12">
+                        {{ form_row(userForm.password.first) }}
+                    </div>
+                    <div class="col-12 col-lg-6 col-md-6 col-sm-12">
+                        {{ form_row(userForm.password.second) }}
+                    </div>
+                </div>
+            </div>
         </div>
         {{ form_row(userForm._token) }}
         <br>
         <div class="text-center">
             <button class="btn btn-primary" type="submit">Modifier</button>
             <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+            {{ form_end(userForm, {'render_rest': false}) }}
             {% if app.user.administrateur == 1 %}
+                <br>
+                <br>
                 <form action="{{ path('supprimer', {id: user.id}) }}" onsubmit="return validate()">
                     <input id="status" hidden value="nope">
                     <button class="btn btn-danger" type="submit">Supprimer utilisateur</button>
                 </form>
             {% endif %}
         </div>
-        {{ form_end(userForm, {'render_rest': false}) }}
     </div>
-
-
-
-    <div class="col-sm-12">
-
-        <h1 class="col-sm-12 text-center" style="padding-bottom: 20px">Mon profil</h1>
-
-        <div class="col-4 align-baseline form-group">
-            <img src="{{ asset('uploads/photo_profil/' ~ user.getUrlPhoto()) }}" width="150">
-            <br>
-        </div>
-
-        {{ form_start(userForm) }}
-        <div>
-            <div class="form-group row">
-                <label class="col-sm-4">{{ form_label(userForm.pseudo) }} : </label>
-                <div class="col-sm-8">{{ form_widget(userForm.pseudo) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">{{ form_label(userForm.prenom) }} : </label>
-                <div class="col-sm-8">{{ form_widget(userForm.prenom) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">{{ form_label(userForm.nom) }} : </label>
-                <div class="col-sm-8">{{ form_widget(userForm.nom) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">{{ form_label(userForm.telephone) }} : </label>
-                <div class="col-sm-8">{{ form_widget(userForm.telephone) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">{{ form_label(userForm.mail) }} : </label>
-                <div class="col-sm-8">{{ form_widget(userForm.mail) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">Nouveau mot de passe : </label>
-                <div class="col-sm-8">{{ form_row(userForm.password) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">{{ form_label(userForm.campus) }} : </label>
-                <div class="col-sm-8">{{ form_widget(userForm.campus) }}</div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-sm-4">Ma photo : </label>
-                <div class="btn-outline-primary col-sm-8"
-                     style="padding-top: 3px;padding-bottom: 2px; background-color: #1b1e21">
-                    {{ form_label(userForm.urlPhoto) }}
-                    {{ form_widget(userForm.urlPhoto) }}
-                    {{ form_errors(userForm.urlPhoto) }}
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
-    {{ form_row(userForm._token) }}
-    </div>
-
-    <div class="text-center">
-        <button class="btn btn-primary" type="submit">Modifier</button>
-        <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
-
-        {% if app.user.administrateur == 1 %}
-            <form action="{{ path('supprimer', {id: user.id}) }}" onsubmit="return validate()">
-                <input id="status" hidden value="nope">
-                <button class="btn btn-danger" type="submit">Supprimer utilisateur</button>
-            </form>
-        {% endif %}
-    </div>
-    {{ form_end(userForm, {'render_rest': false}) }}
 {% endblock %}
 
 {% block javascripts %}
