--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -9,14 +9,6 @@ col-lg-12 col-md-12 col-sm-12">
         Nous sommes le {{ ("now" | date("d/m/y")) }}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            {% if is_granted('ROLE_ADMIN') %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('gestion_villes') }}">Villes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Campus</a>
-                </li>
-            {% endif %}
             <li>
                 <a class="nav-link" href="{{ path('home') }}">Accueil</a>
             </li>
@@ -26,6 +18,17 @@ col-lg-12 col-md-12 col-sm-12">
                     Mon profil
                 </a>
             </li>
+            {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('gestion_villes') }}">Villes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Campus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin') }}">Admin Panel</a>
+                </li>
+            {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('logout') }}">Se déconnecter</a>
             </li>
