supprimer une ville et son code postal et début du update

--- a/templates/ville/gestion-villes.html.twig
+++ b/templates/ville/gestion-villes.html.twig
@@ -27,19 +27,19 @@
                 </thead>
                 {% for ville in listeVilles %}
                     <tr>
-                        <td>{{ ville.nom }}</td>
-                        <td>{{ ville.codePostal }}</td>
-                        <td>
-                            <form style="align-items:center" action="{{ path('supprimer_Ville', {id: ville.id}) }}" onsubmit="return validate()">
-
-                                <input id="status" hidden value="nope">
-
-                                <button class="btn btn-danger" type="submit">Supprimer Ville</button>
-                            </form>
-                            <form style="align-items:center">
-                                <button class="btn btn-info" type="submit">Modifier Ville</button>
-                            </form>
-                        </td>
+                            <td>
+                                {{ ville.nom }}</td>
+                            <td>
+                                {{ ville.codePostal }}</td>
+                            <td>
+                                <form style="align-items:center" action="{{ path('gestion_villes', {id: ville.id}) }}" onsubmit="return validate_update()">
+                                    <button class="btn btn-info" type="submit">Modifier Ville</button>
+                                </form>
+                                <form style="align-items:center" action="{{ path('supprimer_Ville', {id: ville.id}) }}" onsubmit="return validate()">
+                                    <input id="status" hidden value="nope">
+                                    <button class="btn btn-danger" type="submit">Supprimer Ville</button>
+                                </form>
+                            </td>
                     </tr>
                 {% endfor %}
                 <tr>
@@ -62,6 +62,14 @@
         function validate() {
             if (document.getElementById("status").value) {
                 return confirm('Voulez vous vraiment supprimer cette ville?');
+            } else {
+                console.log('Non non');
+                return false;
+            }
+        }
+        function validate_update() {
+            if (document.getElementById("status").value) {
+                return confirm('Voulez vous vraiment modifier cette ville?');
             } else {
                 console.log('Non non');
                 return false;
