Le bouton retour :bowtie:

--- a/templates/User/import.html.twig
+++ b/templates/User/import.html.twig
@@ -16,6 +16,6 @@
     {{ form_end(fichierFrom)}}
 
     <br>
-    <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+    <a class="btn btn-light" href="javascript:history.back()">Retour</a>
 
 {% endblock %}
