--- a/templates/User/profil.html.twig
+++ b/templates/User/profil.html.twig
@@ -25,7 +25,7 @@
             <p>Campus : {{ user.campus }}</p>
         </div>
         <div class="text-center">
-            <a class="btn btn-primary" href="{{ app.request.headers.get('referer') }}">Retour</a>
+            <a class="btn btn-light" href="javascript:history.back()">Retour</a>
         </div>
     </div>
     <div class="text-center">
