--- a/templates/User/register.html.twig
+++ b/templates/User/register.html.twig
@@ -57,5 +57,5 @@
 
     </div>
     <br>
-    <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+    <a class="btn btn-light" href="javascript:history.back()">Retour</a>
 {% endblock %}
