--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -73,7 +73,7 @@
 
     {% endif %}
     <br>
-    <a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+    <a class="btn btn-light" href="javascript:history.back()">Retour</a>
 
 {% endblock %}
 
