--- a/templates/User/profil.html.twig
+++ b/templates/User/profil.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Mon profil{% endblock %}
+{% block title %}Profil de {{ user.pseudo }}{% endblock %}
 
 {% block main %}
     <div class="jumbotron col-lg-6 offset-lg-3 col-md-8 offset-md-2
