--- a/templates/User/register.html.twig
+++ b/templates/User/register.html.twig
@@ -1,6 +1,7 @@
 {% extends 'layout.html.twig' %}
-
+{% block title %}Inscrire un utilisateur{% endblock %}
 {% block main %}
+    <h1 class="text-center">Inscrire un utilisateur</h1>
     <div>
         {{ form_start(userForm) }}
 
