--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Administratueur{% endblock %}
 
 {% block main %}
+    <h1 class="text-center">Panneau Administrateur</h1>
+    <br>
     <div class="text-center">
         <a href="{{ path('register') }}" class="btn btn-primary">Créer un utilisateur</a>
         <a href="{{ path('import') }}" class="btn btn-primary">Importer des utilisateurs</a>
