--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -26,7 +26,7 @@ col-lg-12 col-md-12 col-sm-12">
                     <a class="nav-link" href="#">Campus</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('admin') }}">Admin Panel</a>
+                    <a class="nav-link" href="{{ path('admin') }}">Le bureau de l'admin'</a>
                 </li>
             {% endif %}
             <li class="nav-item">
